Squash a bug

--- a/css/dark.css
+++ b/css/dark.css
@@ -86,19 +86,16 @@ body{
   margin: 0;
   padding: 0;
   width: 200px;
-  background-color: #f1f1f1;
+  background-color: #323232;
+}
 
-
-li a {
+.indexlist a {
   display: block;
-  color: #000;
   padding: 8px 16px;
   text-decoration: none;
 }
 
 /* Change the link color on hover */
-li a:hover {
-  background-color: #555;
-  color: white;
-}
+.indexlist a:hover {
+  background-color: #464646;
 }
